--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,15 @@ img {
     height: auto;
   }
 
-  body {
+body {
     /* align-items: center; */
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
     /* margin: 3vh 0 3vh 0; */
     text-align: center;
-  }
+}
+
+iframe{
+  width:100%; height: 1000px;
+}
